<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_box_bg"
    android:orientation="vertical">

    <com.hificamera.thecamhi.base.TitleView
        android:id="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="The Polytunnnel Guys Ltd"
        android:textColor="@android:color/black"
        android:textSize="30dip"
        android:textStyle="bold" />

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:src="@drawable/splash_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/app_version_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:clickable="true"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_fragment_SDK_version" />

        <TextView
            android:id="@+id/txt_SDK_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/about_fragment_copyright"
        android:textStyle="bold" />

    <ImageView
        android:layout_marginTop="10dp"
        android:src="@drawable/welc"
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_agreement"
            android:textColor="@color/title_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_user_agreement"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_and" />

        <TextView
            android:id="@+id/tv_privacy_agreement"
            android:textColor="@color/title_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_user_privacy"
            />



    </LinearLayout>
</LinearLayout>