<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical" >


        <ImageView
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@drawable/splash_i"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_10"
            android:orientation="vertical"
            android:paddingLeft="@dimen/px_10" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_16"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_16"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="Login"
                android:textAllCaps="false"
                android:layout_width="140dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/shape_color"
                android:layout_height="wrap_content"/>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="Not a member? Sign up now."
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>