<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="#39076A"
        android:textSize="16dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:lineSpacingMultiplier="1.2"
        android:minHeight="100dp"
        android:padding="16dp"
        android:text="text"
        android:textSize="14dp" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:textSize="14dp"
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/about_user_agreement"
            android:textColor="@color/title_middle" />

        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/about_and" />

        <TextView
            android:textSize="14dp"
            android:id="@+id/tv_privacy_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/about_user_privacy"
            android:textColor="@color/title_middle" />

    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#e6e6e6"
        android:visibility="gone" />

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="#666666"
            android:textSize="15dp"
            android:visibility="gone" />

        <View
            android:id="@+id/line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#e6e6e6"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="#39076A"
            android:textSize="15dp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>